# Back End/models/Accounts.js
@@ -1,11 +1,12 @@
-import { Schema, model } from 'mongoose';
+const mongoose = require('mongoose');
 
 
-const accountSchema = new Schema({
-    account_id: { type: String, required: true },
+const accountSchema = new mongoose.Schema({
+    account_id: { type: String, default: () => crypto.randomUUID(), required: true },
     user_id: { type: String, required: true },
     account_name: { type: String, required: true },
     balance: { type: Number }
 });
 
-export default model('Accounts', accountSchema);
+const Accounts = mongoose.model("Accounts", accountSchema);
+module.exports = Accounts;
