# Back End/models/Transactions.js
@@ -1,14 +1,15 @@
-import { Schema, model } from 'mongoose';
+const mongoose = require('mongoose');
 
 
-const transactionSchema = new Schema({
-    transaction_id: { type: String, required: true },
+const transactionSchema = new mongoose.Schema({
+    transaction_id: { type: String, default: () => crypto.randomUUID(), required: true },
     account_id: { type: String, required: true },
     category_id: { type: String, required: true },
-    type: { type: String, Enum: ["income", "expense"], required: true },
+    type: { type: String, enum: ["income", "expense"], required: true },
     amount: { type: Number, required: true },
     date: { type: Date, default: Date.now },
     description: { type: String }
 });
 
-export default model('Transactions', transactionSchema);
+const Transaction = mongoose.model('Transaction', transactionSchema);
+module.exports = Transaction;
