# Back End/routes/accountRoutes.js
@@ -1,11 +1,22 @@
 const express = require('express');
 const router = express.Router();
-// import * as AccountController from '../controllers/accountController.js';
 const AccountController = require('../controllers/accountController.js');
 
-router.post('/', AccountController.create);
-router.delete('/', AccountController.delete);
-router.get('/', AccountController.getAll);
-router.patch('/:id', AccountController.updateBalance);
+
+
+router.post('/create', AccountController.createAccount);
+
+
+router.patch('/:account_id', AccountController.updateAccount);
+
+
+router.get('/:account_id', AccountController.getSingleAccount);
+
+
+router.get('/:user_id', AccountController.getUserAccounts)
+
+
+router.delete('/delete', AccountController.deleteAccount);
+
 
 module.exports = router;
